missed two references to old name

--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row fb-login-wrapper">
-  <button class="facebook-login-button" type="button">Connect with Facebook</button>
+  <button class="btn-fb-connect" type="button">Connect with Facebook</button>
 </div>
 
 <div class="row">
