fix active state to match design

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -310,3 +310,8 @@ input[type="submit"].btn {
   border: none;
   background-color: transparent;
 }
+
+.btn-fb-connect:active {
+  padding-top: 4px;
+  color: rgba(256, 256, 256, .6);
+}
